# mumble-bot

./: .gitignore  Cargo.toml  build.rs  mumble.pem
data/: man16kHz.raw  play_latest.sh  play_mic.sh  play_raw.sh  thx.raw  thx16kHz.raw  woman16kHz.raw
src/: bin.rs  config.rs  connector.rs  gst.rs  lex.rs  lib.rs  main.rs  mumble.rs  positional.rs  protocol.rs  session.rs  tcp.rs  udp.rs  util.rs  utils.rs  varint.rs
