[package]
name = "mumblebot"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
build = "build.rs"

[dependencies]
log = "0.3"
clap = "2.24"
toml = "0.4"
byteorder = "1.0.0"
protobuf = "1.2"
openssl = "0.9"
tokio-core = "0.1"
tokio-io = "0.1"
#tokio-file-unix = "0.3.0"
tokio-timer = "0.1"
tokio-openssl = "0.1"
futures = "0.1"
native-tls = "0.1"
tokio-tls = "0.1"
varint = "0.9.0"
# opus = { git = "https://github.com/rozgo/opus-rs.git", branch = "windows_vs" }
opus = { path = "../opus-rs" }
hyper = "0.11"
hyper-tls = "0.1"
pretty_env_logger = "0.1"
chrono = "0.2"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
#warheadhateus = { git = "https://github.com/rozgo/warheadhateus.git" }
byte-slice-cast = "0.1"
sample = "*"
# ocb = { git = "https://github.com/rozgo/ocb.rs.git" }
# ocb = { path = "../ocb.rs" }
ocbaes128 = { path = "../OCB-AES128" }
glib = { version = "0.3", git = "https://github.com/gtk-rs/glib" }
gio = { version = "0.2", git = "https://github.com/gtk-rs/gio" }
gstreamer = {git = "https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-app = {git = "https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-audio = {git = "https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-base = {git = "https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-player = {git = "https://github.com/sdroege/gstreamer-rs.git" }
gstreamer-video = {git = "https://github.com/sdroege/gstreamer-rs.git" }

# [features]
# # gst-player = ["gstreamer-player"]
# # gtksink = ["gtk", "gio"]
# # gtkvideooverlay = ["gtk", "gdk", "gio"]
# # gtkvideooverlay-x11 = ["gtkvideooverlay"]
# # gtkvideooverlay-quartz = ["gtkvideooverlay"]
# # tokio = ["gstreamer/futures", "futures", "tokio-core"]
# tokio = ["gstreamer/futures"]
# default-features = []

[lib]
name = "mumblebot"
path = "src/lib.rs"

[[bin]]
name = "mumblebin"
path = "src/bin.rs"
